edition = "2023";

package proto.stack.v1;

import "google/protobuf/go_features.proto";
import "proto/stack/v1/enums.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/endobit/gen/go/proto/stack/v1;stackv1";



//
// Create
//

message CreateHostRequest {
  string zone = 1;
  string cluster = 2;
  string name = 3;
}

//
// Read
//

message ReadHostsRequest {
  string zone = 1;
  string cluster = 2;
  oneof host {
	string name = 3;
	string glob = 4;
  }
}

message ReadHostsResponse {
  string zone = 1;
  string cluster = 2;
  string name = 3;
  string make = 4;
  string model = 5;
  string environment = 6;
  string appliance = 7;
  string location = 8;
  string rack = 9;
  oneof host {
    uint32 rank = 10;
    uint32 slot = 11;
  }
  HostType type = 12;
}

//
// Update
//

message UpdateHostRequest {
  message Fields {
	string name = 1;
    string make = 2;
    string model = 3;
    string environment = 4;
    string appliance = 5;
    string location = 6;
    string rack = 7;
    oneof host {
      uint32 rank = 8;
      uint32 slot = 9;
    }
    HostType type = 10;
  }

  string zone = 1;
  string cluster = 2;
  string name = 3;
  Fields fields = 4;
}

//
// Delete
//

message DeleteHostsRequest {
  string zone = 1;
  string cluster = 2;
  oneof host {
	string name = 3;
	string glob = 4;
  }
}




//
// Create
//

message CreateHostAttrRequest {
  string zone = 1;
  string cluster = 2;
  string host = 3;
  string name = 4;
}

//
// Read
//

message ReadHostAttrsRequest {
  string zone = 1;
  string cluster = 2;
  string host = 3;
  oneof attr {
    string name = 4;
    string glob = 5;
  }
}

message ReadHostAttrsResponse {
  string zone = 1;
  string cluster = 2;
  string host = 3;
  string name = 4;
  string value = 5;
  bool protected = 6;
}

//
// Update
//

message UpdateHostAttrRequest {
  message Fields {
    string name = 1;
    string value = 2;
    bool protected = 3;
  }

  string zone = 1;
  string cluster = 2;
  string host = 3;
  string name = 4;
  Fields fields = 5;
}

//
// Delete
//

message DeleteHostAttrsRequest {
  string zone = 1;
  string cluster = 2;
  string host = 3;
  oneof attr {
    string name = 4;
    string glob = 5;
  }
}





//
// Create
//

message CreateHostInterfaceRequest {
  string zone = 1;
  string cluster = 2;
  string host = 3;
  string name = 4;
}

//
// Read
//

message ReadHostInterfacesRequest {
  string zone = 1;
  string cluster = 2;
  string host = 3;
  oneof interface {
    string name = 4;
    string glob = 5;
  }
}

message ReadHostInterfacesResponse {
  string zone = 1;
  string cluster = 2;
  string host = 3;
  string name = 4;
  string ip = 5;
  string mac = 6;
  string netmask = 7;
  bool dhcp = 8;
  bool pxe = 9;
  bool management = 10;
  InterfaceType type = 11;
  BondMode bond_mode = 12;
  string master = 13;
  string network = 14;
}

//
// Update
//

message UpdateHostInterfaceRequest {
  message Fields {
    string host = 1;
    string name = 2;
    string ip = 3;
    string mac = 4;
    string netmask = 5;
    bool dhcp = 6;
    bool pxe = 7;
    bool management = 8;
    InterfaceType type = 9;
    BondMode bond_mode = 10;
    string master = 11;
    string network = 12;
  }

  string zone = 1;
  string cluster = 2;
  string host = 3;
  string name = 4;
  Fields fields = 5;
}

//
// Delete
//

message DeleteHostInterfacesRequest {
  string zone = 1;
  string cluster = 2;
  string host = 3;
  oneof interface {
    string name = 4;
    string glob = 5;
  }
}
